re-add scrollbar to combobox + fix overflow

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -116,14 +116,6 @@
   80% { transform: translateX(8px) rotate(10deg); }
 }
 
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
-}
-.scrollbar-hide {
-  -ms-overflow-style: none;
-  scrollbar-width: none; 
-}
-
 .fade-enter-active {
   transition: opacity 0.5s ease;
 }
